# Celebal-Internship-2026

./: .gitignore  DenoisingAutoencoder.html  DenoisingAutoencoder.ipynb  README.md  requirements.txt
week_1/: week1_anshu_solved.ipynb
week_2/: pipeline.ipynb
week_3/: README.md  customer_intelligence_country_segmentation.ipynb  requirements.txt  unsupervised-learning-on-country-data.ipynb
week_3/data/: Country-data.csv  README.md
week_4/: CIFAR10_ANN_CNN_Learning_Project.ipynb
week_5/: README.md  Text_Generation_RNN_LSTM_GRU_Learning_Project.ipynb
week_6/models/: denoising_autoencoder.pth  training_history.json
week_7/: .env.example  .gitignore  README.md  REPORT.md  Week7_Project.md  app.py  evaluate_baseline.py  quickstart.py  requirements.txt  run_experiments.py
week_7/notebooks/: analysis.ipynb
week_7/results/: ablation_alpha.csv  ablation_chunk_size.csv  ablation_embedding.csv  baseline_eval_n8.json  baseline_records_n8.csv  cmp_answers.csv  (+3 more)
week_8/: README.md  week 8 quiz.docx  week_8_assignment.ipynb
week_8/agentic_ai_pipeline/: Makefile  README.md  main.py  pyproject.toml  requirements.txt
week_8/agentic_ai_pipeline/agentic_pipeline/: __init__.py  errors.py  graph.py  metrics.py  nodes.py  parallel.py  pipeline.py  router.py  schemas.py  state.py  tools.py  trajectory.py
week_8/agentic_ai_pipeline/docs/: architecture.md
week_8/agentic_ai_pipeline/examples/: demo.py
week_8/agentic_ai_pipeline/tests/: test_graph.py  test_metrics.py  test_nodes.py  test_pipeline.py  test_retry.py  test_router.py  test_schemas.py  test_tools.py
(+13 files in other folders)
