[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-pipeline"
version = "1.0.0"
description = "A single-agent system built as a stateful directed graph (Celebal Week 8)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Anshumaan Singh" }]
keywords = ["agent", "pipeline", "state-graph", "routing", "tools"]
# No runtime dependencies — standard library only.
dependencies = []

[project.scripts]
agentic-pipeline = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["agentic_pipeline"]
